# Van_Gobot

./: CustomTkinter.py  Notices.docx  README.md  arms.py  config.toml  edge_walker.py  family.py  fdog.py  get_mira_coords.py  interactive_jerome.py  main.py  mira_coords.pkl  mira_correct.pkl  photo2drawing.py  photomaton.py  robot_control_app.py  skeletonize  test.py  texture.py  utils.py  ~$otices.docx
Van_Gobot/: README.md  arms.py  config.toml  coordinates.py  dessin_musee.py  dog_pipeline.py  interactive_dog.py  main.py  mira_normalized.pkl  pyproject.toml  skeletonize_linux  utils.py
Van_Gobot/drawing_arm.egg-info/: SOURCES.txt  requires.txt
Van_Gobot/notebooks/: dog_test.ipynb  manual_dog.ipynb
drawing_arm.egg-info/: PKG-INFO
notebooks/: dog_photobooth.ipynb  photo_to_drawing.ipynb
